--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
+    "@zeit/next-sass": "^1.0.1",
     "axios": "^0.21.1",
     "next": "11.0.1",
     "react": "17.0.2",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "eslint": "7.32.0",
-    "eslint-config-next": "11.0.1"
+    "eslint-config-next": "11.0.1",
+    "sass": "^1.37.2"
   }
 }
